--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">     
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">       
   <link rel="stylesheet" type="text/css" href="assets/css/proui.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
   <!-- endbuild -->
 
   <!-- prochtml:remove:dist -->
@@ -223,6 +224,7 @@
     <script src="../bower_components/jquery.easing/js/jquery.easing.js"></script>
     <script src="../bower_components/select2/select2.js"></script>
     <script src="../bower_components/angular-ui-select2/src/select2.js"></script>
+    <script src="../bower_components/angular-ui-utils/highlight.js"></script>
     <script src="../bower_components/iCheck/icheck.min.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
