--- a/app/index.html
+++ b/app/index.html
@@ -220,12 +220,14 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/bootbox.js/bootbox.js"></script>
     <script src="../bower_components/enquire/dist/enquire.js"></script>
+    <script src="../bower_components/jquery-validation/dist/jquery.validate.js"></script>
     <script src="../bower_components/jquery.slimscroll/jquery.slimscroll.min.js"></script>
     <script src="../bower_components/jquery.easing/js/jquery.easing.js"></script>
     <script src="../bower_components/select2/select2.js"></script>
     <script src="../bower_components/angular-ui-select2/src/select2.js"></script>
     <script src="../bower_components/iCheck/icheck.min.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
+    <script src="../bower_components/stepy/lib/jquery.stepy.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-segmentio/angular-segmentio.js"></script>
     <script src="../bower_components/angular-ui-utils/highlight.js"></script>
@@ -247,7 +249,6 @@
       <script src="scripts/app.js"></script>
       <!-- endbuild -->
 
-</body>
 <script>
 UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zK2VtojScbtpM3kB4CRZA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
 UserVoice.push(['set', {
@@ -257,4 +258,5 @@ UserVoice.push(['set', {
 }]);
 UserVoice.push(['addTrigger', { mode: 'contact', trigger_position: 'bottom-left' }]);
 </script>
+</body>
 </html>
