--- a/app/index.html
+++ b/app/index.html
@@ -235,8 +235,11 @@
     <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/stepy/lib/jquery.stepy.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
-    <script src="../bower_components/angular-segmentio/angular-segmentio.js"></script>
     <script src="../bower_components/angular-ui-utils/highlight.js"></script>
+    <script src="../bower_components/SHA-1/sha1.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-mixpanel.js"></script>
     <!-- endbower -->
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script> 
@@ -255,6 +258,9 @@
       <script src="scripts/app.js"></script>
       <!-- endbuild -->
 
+<script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
+for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
+mixpanel.init("0f110baeb6150d7e3b8968e32d7a5595");</script>
 <script>
 UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zK2VtojScbtpM3kB4CRZA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
 UserVoice.push(['set', {
