--- a/app/index.html
+++ b/app/index.html
@@ -232,7 +232,6 @@
     <script src="../bower_components/select2/select2.js"></script>
     <script src="../bower_components/angular-ui-select2/src/select2.js"></script>
     <script src="../bower_components/iCheck/icheck.min.js"></script>
-    <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/stepy/lib/jquery.stepy.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-ui-utils/highlight.js"></script>
@@ -259,6 +258,7 @@
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script> 
     <script type='text/javascript' src='assets/plugins/bootstro.js/bootstro.js'></script>
+    <script type='text/javascript' src='assets/plugins/satellizer/satellizer.js'></script>
     <!-- endbuild -->
     
 
