--- a/app/index.html
+++ b/app/index.html
@@ -254,11 +254,11 @@
     <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-intercom.js"></script>
+    <script src="../bower_components/satellizer/satellizer.js"></script>
     <!-- endbower -->
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script> 
     <script type='text/javascript' src='assets/plugins/bootstro.js/bootstro.js'></script>
-    <script type='text/javascript' src='assets/plugins/satellizer/satellizer.js'></script>
     <!-- endbuild -->
 
       <!-- build:js({.tmp,app}) scripts/scripts.js -->
