--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="assets/css/ie8.css">
     <script type="text/javascript" src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/charts-flot/excanvas.min.js"></script>
     <script type='text/javascript' src='assets/plugins/misc/placeholdr.js'></script>
   <![endif]-->
 
@@ -126,12 +125,12 @@
         <a id="leftmenu-trigger" tooltip-placement="right" tooltip="Toggle Sidebar" ng-click="toggleLeftBar()"><i class="fa fa-bars"></i></a>        
         <img src="assets/img/logo_startupcommunity.png" width="160px" style="padding: 11px 10px 0 0px" class="navbar-header pull-left"/>
         <div class="navbar-header pull-left" style="border-left: 1px solid #e4e7eb;">
-            <li id="search">
+            <div id="search">
                  <form ng-submit="search(global.search.query)">
-                    <input type="text" ng-model="global.search.query" class="search-query" placeholder="Search...">
+                    <input type="text" ng-model="global.search.query" class="search-query" id="searchbox" placeholder=" Search...">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
-            </li>
+            </div>
         </div>
 
         <ul class="nav navbar-nav pull-right toolbar">
@@ -274,7 +273,7 @@
 
 <script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
-mixpanel.init("0f110baeb6150d7e3b8968e32d7a5595");</script>
+mixpanel.init("0f110baeb6150d7e3b8968e32d7a5595", { track_pageview: false });</script>
 <script>
 UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zK2VtojScbtpM3kB4CRZA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
 UserVoice.push(['set', {
