--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,11 @@
   <script type="text/javascript" src="assets/plugins/misc/less.js"></script>
   <!-- /prochtml -->
 
+  <script
+    src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
+    data-apikey="0d9fee787095deb887ac5b39b4a80e3d">
+  </script>
+
   <style type="text/css">
     [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
