--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <link rel='stylesheet' type='text/css' href='assets/plugins/progress-skylo/skylo.css' /> 
   <link rel='stylesheet' type='text/css' href='assets/plugins/form-select2/select2.css' />  
   <link rel='stylesheet' type='text/css' href='assets/plugins/bootstro.js/bootstro.css' />
+  <link rel='stylesheet' type='text/css' href='assets/plugins/fullcalendar/fullcalendar.css' />
   <!-- endbuild -->
   
 
