--- a/app/index.html
+++ b/app/index.html
@@ -128,8 +128,9 @@
   ng-cloak>
     
     <header class="navbar navbar-inverse" ng-class="{'navbar-fixed-top': style_fixedHeader, 'navbar-static-top': !style_fixedHeader}" role="banner">
-        <a id="leftmenu-trigger" tooltip-placement="right" tooltip="Toggle Sidebar" ng-click="toggleLeftBar()"><i class="fa fa-bars"></i></a>        
-        <img src="assets/img/thumb_32.png" width="32px" style="padding: 11px 10px 0 0px" class="navbar-header pull-left"/>
+        <a id="leftmenu-trigger" tooltip-placement="right" tooltip="Toggle Sidebar" ng-click="toggleLeftBar()">
+          <img src="assets/img/thumb_32.png" width="32px" style="padding: 1px 3px 2px 0;" class="navbar-header pull-left"/>
+        </a>
         <div class="navbar-header pull-left" style="border-left: 1px solid #e4e7eb;">
             <div id="search">
                  <form ng-submit="search(global.search.query)">
