--- a/app/frontend.html
+++ b/app/frontend.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>ProUI Frontend - Responsive Bootstrap Site Template</title>
+        <title>StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem</title>
 
         <meta name="description" content="StartupCommunity.org helps communities build, grow and measure their entrepreneurial ecosystem."">
         <meta name="author" content="James Gentes"">
@@ -12,32 +12,19 @@
 
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0">
 
-        <!-- Icons -->
-        <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
         <link rel="shortcut icon" href="/public/favicon.png">
-        <!-- END Icons -->
 
-        <!-- Stylesheets -->
-        <!-- Bootstrap is included in its original form, unaltered -->
+        <!-- build:css({.tmp,app}) frontend/css/main.css -->
         <link rel="stylesheet" href="frontend/css/bootstrap.min.css">
-
-        <!-- Related styles of various icon packs and plugins -->
         <link rel="stylesheet" href="frontend/css/plugins.css">
-
-        <!-- The main stylesheet of this template. All Bootstrap overwrites are defined in here -->
         <link rel="stylesheet" href="frontend/css/main.css">
-
-        <!-- The themes stylesheet of this template (for using specific theme color in individual elements - must included last) -->
         <link rel="stylesheet" href="frontend/css/themes.css">
-        <!-- END Stylesheets -->
+        <!-- endbuild -->
 
-        <!-- Modernizr (browser feature detection library) & Respond.js (enables responsive CSS code on browsers that don't support it, eg IE8) -->
         <script src="frontend/js/vendor/modernizr-respond.min.js"></script>
     </head>
     <body>
         <!-- Page Container -->
-        <!-- In the PHP version you can set the following options from inc/config file -->
-        <!-- 'boxed' class for a boxed layout -->
         <div id="page-container">
             <!-- Site Header -->
             <header>
@@ -294,9 +281,9 @@
                             </ul>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <h4 class="footer-heading"><span id="year-copy">2014</span> &copy; <a href="http://goo.gl/TDOSuC">ProUI Frontend</a></h4>
+                            <h4 class="footer-heading"><span id="year-copy">2015</span> &copy; StartupCommunity.org</h4>
                             <ul class="footer-nav list-inline">
-                                <li>Crafted with <i class="fa fa-heart text-danger"></i> by <a href="http://goo.gl/vNS3I">pixelcave</a></li>
+                                <li>Crafted with <i class="fa fa-heart text-danger"></i> from Bend, Oregon</li>
                             </ul>
                         </div>
                     </div>
@@ -310,13 +297,15 @@
         <!-- Scroll to top link, initialized in frontend/js/app.js - scrollToTop() -->
         <a href="#" id="to-top"><i class="fa fa-angle-up"></i></a>
 
-        <!-- Include Jquery library from Google's CDN but if something goes wrong get Jquery from local file -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>!window.jQuery && document.write(decodeURI('%3Cscript src="frontend/js/vendor/jquery-1.11.2.min.js"%3E%3C/script%3E'));</script>
-
-        <!-- Bootstrap.js, Jquery plugins and Custom JS code -->
+        <!-- build:js frontend/scripts/vendor.js -->
+        <script src="frontend/js/vendor/jquery-1.11.2.min.js"></script>
         <script src="frontend/js/vendor/bootstrap.min.js"></script>
+        <!-- endbuild -->
+
+        <!-- build:js({.tmp,app}) frontend/scripts/scripts.js -->
         <script src="frontend/js/plugins.js"></script>
         <script src="frontend/js/app.js"></script>
+        <!-- endbuild -->
+
     </body>
 </html>
