--- a/app/frontend.html
+++ b/app/frontend.html
@@ -6,8 +6,8 @@
 
         <title>StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem</title>
 
-        <meta name="description" content="StartupCommunity.org helps communities build, grow and measure their entrepreneurial ecosystem."">
-        <meta name="author" content="James Gentes"">
+        <meta name="description" content="StartupCommunity.org helps communities build, grow and measure their entrepreneurial ecosystem.">
+        <meta name="author" content="James Gentes">
         <meta name="robots" content="">
 
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0">
@@ -21,7 +21,8 @@
         <link rel="stylesheet" href="frontend/css/themes.css">
         <!-- endbuild -->
 
-        <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+        <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");//noinspection CommaExpressionJS
+        2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
         for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
       mixpanel.init("0f110baeb6150d7e3b8968e32d7a5595");</script><!-- end Mixpanel -->
 
@@ -34,7 +35,7 @@
                 <div class="container">
                     <!-- Site Logo -->
                     <a href="/" class="site-logo">
-                      <img src="../assets/img/thumb_28h.png" style="margin-top:-4px; height: 32px; width: 32px;" /> <strong>Startup</strong>Community
+                      <img src="assets/img/thumb_28h.png" style="margin-top:-4px; height: 32px; width: 32px;" /> <strong>Startup</strong>Community
                     </a>
                     <!-- Site Logo -->
 
@@ -51,7 +52,7 @@
                         <ul class="site-nav">
                             <li>
                                 Have an account?&nbsp;
-                                <button href="/login" class="btn btn-success">Sign in</button>
+                                <form action="views/login.html" style="display:inline-block;"><button class="btn btn-success">Sign in</button></form>
                             </li>
                         </ul>
                         <!-- END Main Menu -->
@@ -70,7 +71,7 @@
               <div class="panel" style="max-width: 600px; min-width: 300px; margin:auto;">
                 <div class="panel-body">
                   <h4 class="text-center" style="margin-bottom: 25px; color: #000; font-size:22px;">Sign up to be notified when we launch!</h4>
-                  <form class="form-horizontal" style="margin-bottom: 0px !important;">
+                  <form class="form-horizontal" style="margin-bottom: 0 !important;">
                     <div class="form-group">
                       <div class="col-sm-12">
                         <div class="input-group">
@@ -191,7 +192,7 @@
                 <div class="container">
                     <h3 class="site-heading text-center"><strong>Sign Up Today</strong> and receive <strong>30% discount</strong>!</h3>
                     <div class="site-block text-center">
-                        <form action="frontend/features.html" method="post" class="form-horizontal" onsubmit="return false;">
+                        <form action="views/login.html" method="post" class="form-horizontal" onsubmit="return false;">
                             <div class="form-group">
                                 <div class="col-md-6 col-md-offset-3">
                                     <label class="sr-only" for="register-email">Your Email</label>
