--- a/app/frontend/about.html
+++ b/app/frontend/about.html
@@ -282,7 +282,7 @@
             <section class="site-content site-section themed-background">
                 <div class="container">
                     <!-- Stats Row -->
-                    <!-- CountTo (initialized in js/app.js), for more examples you can check out https://github.com/mhuggins/jquery-countTo -->
+                    <!-- CountTo (initialized in js/frontend.js), for more examples you can check out https://github.com/mhuggins/jquery-countTo -->
                     <div class="row" id="counters">
                         <div class="col-sm-6 col-md-3">
                             <div class="counter site-block">
@@ -358,7 +358,7 @@
         </div>
         <!-- END Page Container -->
 
-        <!-- Scroll to top link, initialized in js/app.js - scrollToTop() -->
+        <!-- Scroll to top link, initialized in js/frontend.js - scrollToTop() -->
         <a href="#" id="to-top"><i class="fa fa-angle-up"></i></a>
 
         <!-- Include Jquery library from Google's CDN but if something goes wrong get Jquery from local file -->
