--- a/app/frontend/blog_post.html
+++ b/app/frontend/blog_post.html
@@ -399,7 +399,7 @@
         </div>
         <!-- END Page Container -->
 
-        <!-- Scroll to top link, initialized in js/app.js - scrollToTop() -->
+        <!-- Scroll to top link, initialized in js/frontend.js - scrollToTop() -->
         <a href="#" id="to-top"><i class="fa fa-angle-up"></i></a>
 
         <!-- Include Jquery library from Google's CDN but if something goes wrong get Jquery from local file -->
