frontend done, working on jump to app

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -189,7 +189,7 @@
                         <div class="col-sm-6 col-md-3">
                             <h4 class="footer-heading">Our Journey</h4>
                             <ul class="footer-nav list-inline">
-                                <li><a href="/journey">Startup Community Lessons</a></li>
+                                <li><a href="/lessons">Startup Community Lessons</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6 col-md-3">
@@ -207,6 +207,8 @@
         <!-- END Page Container -->
 
         <a href="#" id="to-top" class="to-top"><i class="icon-angle-circled-up"></i></a>
+
+        <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
 
         <!-- build:js frontend/scripts/vendor.js -->
         <script src="frontend/js/vendor/modernizr-respond.min.js"></script>
@@ -256,8 +258,5 @@
           });
 
         </script>
-
-
-
     </body>
 </html>
