checkpoint prior to html auth attempt

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -64,7 +64,7 @@
           <section class="site-section site-section-light site-section-top parallax-image themed-background-default" style="background-image: url('frontend/img/frontend_office.jpg')">
             <div class="container">
               <h1 class="text-center animation-slideDown"><strong>Kickstart your city's entrepreneurial ecosystem</strong></h1>
-              <h2 class="text-center animation-slideDown push">A framework for building and measuring startup communities, from our experience creating <a href="http://www.entrepreneur.com/article/223997" target="_blank">the most entrepreneurial city in America</a>. <span style="font-size:12px">(Entrepreneur Mag)</span></h2>
+              <h2 class="text-center animation-slideDown push">A framework for building and measuring startup communities, from our experience creating the <a href="http://www.entrepreneur.com/article/223997" target="_blank">most entrepreneurial city in America</a>.<br/><span style="font-size:12px">(Entrepreneur Mag)</span></h2>
             </div>
             <div class="container" style="margin-top:-10px;">
 
@@ -252,7 +252,7 @@
             });
 
             $('#signIn').click(function() {
-              window.location.replace("/home");
+              window.location.replace("/app");
             });
 
           });
