--- a/app/frontend.html
+++ b/app/frontend.html
@@ -74,10 +74,10 @@
                   <form class="form-horizontal" id="inviteForm" style="margin-bottom: 0 !important;">
                     <div class="form-group">
                       <div class="col-sm-12">
-                        <h4 class="text-center" style="color: #000; font-size: 20px; padding-left: 20px;">I am a:
-                          <label class="switch switch-danger"><input id="founder" type="checkbox"><span></span></label> Founder
-                          <label class="switch switch-info"><input id="advisor" type="checkbox"><span></span></label> Advisor
-                          <label class="switch switch-success"><input id="investor" type="checkbox"><span></span></label> Investor
+                        <h4 class="text-center" style="color: #000; font-size: 20px; padding-left: 20px;">I am a:&nbsp;
+                          <label class="switch switch-danger"><input id="founder" type="checkbox"><span></span></label> Founder&nbsp;
+                          <label class="switch switch-info"><input id="advisor" type="checkbox"><span></span></label> Advisor&nbsp;
+                          <label class="switch switch-success"><input id="investor" type="checkbox"><span></span></label> Investor&nbsp;
                         </h4>
                       </div>
                     </div>
@@ -158,7 +158,7 @@
           <!-- Sign Up Action -->
           <section class="site-content site-section site-section-light themed-background-dark-night">
             <div class="container">
-              <h3 class="site-heading text-center">Are you a <strong>founder</strong>, <strong>advisor</strong>, or <strong>investor</strong>?</h3>
+              <h3 class="site-heading text-center">Are you a startup <strong>founder</strong>, <strong>advisor</strong>, or <strong>investor</strong>?</h3>
               <div class="site-block text-center">
                 <button type="submit" class="to-top btn btn-primary" style="font-size:24px; padding:15px;">Request an invite</button>
               </div>
