--- a/app/frontend.html
+++ b/app/frontend.html
@@ -208,7 +208,7 @@
 
         <a href="#" id="to-top" class="to-top"><i class="icon-angle-circled-up"></i></a>
 
-        <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
 
         <!-- build:js frontend/scripts/vendor.js -->
         <script src="frontend/js/vendor/modernizr-respond.min.js"></script>
